argocd/applications/postgres-upgrade-acceptance/base/preparation.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-upgrade-default-deny
  namespace: postgres-upgrade-acceptance
  annotations:
    argocd.argoproj.io/sync-wave: '-30'
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress: []
